新增：四类网站技能与双技能按需加载
完善技能元数据懒加载、回合配额、读取观测及正文隔离测试。

统一生成回复使用简体中文，提高路由输出预算，并关闭前端开发工具入口。